TA-4084 Fix link on mobile

--- a/css/ussba.css
+++ b/css/ussba.css
@@ -322,7 +322,6 @@ li {
   }
 
   #national-fundings-link {
-    display: block;
     padding-left: 0px;
     padding-top: 8px;
   }
@@ -340,6 +339,10 @@ li {
 
   .main-menu {
     display: none;
+  }
+
+  .show {
+    display: block;
   }
 }
 
